# smartpurchase

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/smartpurchase/: main.py  uvicorn_runner.py
src/smartpurchase/core/: __init__.py  config.py
tests/smartpurchase/: test_main.py
