[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "smartpurchase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]
dev = [
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

